--- a/app_festaNow/templates/festa_now/staff/home.html
+++ b/app_festaNow/templates/festa_now/staff/home.html
@@ -4,12 +4,12 @@
 <div class="col-md-7" style="background-color:#EEE9F7; ">
       
     <h1>집가자</h1>
-        <a href="{% url 'new_home'%}">글쓰기 </a>
+        <a href="{% url 'new_home' festa.id %}">글쓰기 </a>
         
         <hr>
         {% for home in homes.all %}
         <br>
-        <a href="{% url 'detail_home' home.id %}"> : {{home.title}}</a> 
+        <a href="{% url 'detail_home' festa.id home.id %}"> : {{home.title}}</a> 
         {{home.writer}}
         {{home.region}}
         {{home.pub_date}}
