--- a/app_festaNow/templates/festa_now/audience/audience.html
+++ b/app_festaNow/templates/festa_now/audience/audience.html
@@ -10,18 +10,18 @@
  
     <div class="row">
         <div class="col-md-5">
-            <img src = http://www.kpenews.com/Files/4/News/201906/260_20190620191955168.JPG style="height:500px">
+            <img src ="{{festa.poster.url}}"style="height:500px">
             <ul>
 
-                <li><a href="{% url 'now_audience' %}">공지사항</a></li>
+                <li><a href="{% url 'now_audience' festa.id %}">공지사항</a></li>
                 
-                <li><a href="{% url 'now_now' %}">Festa now</a></li>
+                <li><a href="{% url 'now_now' festa.id %}">Festa now</a></li>
                 
-                <li><a href="{% url 'audience_map' %}">지도</a></li>
+                <li><a href="{% url 'audience_map' festa.id %}">지도</a></li>
                 
                 <li><a href="">찾아가라</a></li>
 
-                <li><a href="{% url 'audience_home' %}">집가자</a></li>
+                <li><a href="{% url 'audience_home' festa.id %}">집가자</a></li>
 
                 </ul>
 
