--- a/app_festaNow/templates/festa_now/audience/map.html
+++ b/app_festaNow/templates/festa_now/audience/map.html
@@ -6,37 +6,72 @@
 
 <body>
  -->
- {% block content %}
- 
-    <div class="row">
-        <div class="col-md-5">
-            <img src = http://www.kpenews.com/Files/4/News/201906/260_20190620191955168.JPG style="height:500px">
-            <ul class="vertical-menu">
+{% block content %}
 
-                <li><a href="{% url 'now_audience' %}">공지사항</a></li>
-                
-                <li><a href="{% url 'now_now' %}">Festa now</a></li>
-                
-                <li><a href="{% url 'audience_map' %}">지도</a></li>
-                
-                <li><a href="">찾아가라</a></li>
+<div class="row">
+    <div class="col-md-5">
+        <img src="{{festa.poster.url}}" style="height:500px">
+        <ul class="vertical-menu">
 
-                <li><a href="{% url 'audience_home' %}">집가자</a></li>
+            <li><a href="{% url 'now_audience' festa.id %}">공지사항</a></li>
 
-                </ul>
-        </div>
+            <li><a href="{% url 'now_now' festa.id %}">Festa now</a></li>
 
-    <div class="col-md-7" style="background-color:#EEE9F7; ">
-      
-       
-            </div>
-                
-           
-       
+            <li><a href="{% url 'audience_map' festa.id %}">지도</a></li>
 
+            <li><a href="">찾아가라</a></li>
 
+            <li><a href="{% url 'audience_home' festa.id %}">집가자</a></li>
+
+        </ul>
     </div>
+    <div class="col-md-7" style="background-color:#EEE9F7; ">
+        {{festa.space}} {{festa.detail_map}}
+        <div id="map" style="width:100%;height:350px;"></div>
 
-    
+        <script type="text/javascript"
+            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3a6997107b687683607fb8587b9bb914&libraries=services"></script>
+        <script>
+            var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+                mapOption = {
+                    center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+                    level: 3 // 지도의 확대 레벨
+                };
+
+            // 지도를 생성합니다    
+            var map = new kakao.maps.Map(mapContainer, mapOption);
+
+            // 주소-좌표 변환 객체를 생성합니다
+            var geocoder = new kakao.maps.services.Geocoder();
+
+            // 주소로 좌표를 검색합니다
+            geocoder.addressSearch('{{festa_object.detail_map}}', function (result, status) {
+
+                // 정상적으로 검색이 완료됐으면 
+                if (status === kakao.maps.services.Status.OK) {
+
+                    var coords = new kakao.maps.LatLng(result[0].y, result[0].x);
+
+                    // 결과값으로 받은 위치를 마커로 표시합니다
+                    var marker = new kakao.maps.Marker({
+                        map: map,
+                        position: coords
+                    });
+
+                    // 인포윈도우로 장소에 대한 설명을 표시합니다
+                    var infowindow = new kakao.maps.InfoWindow({
+                        content: '<div style="width:150px;text-align:center;padding:6px 0;">공연 장소:{{festa_object.space}}</div>'
+                    });
+                    infowindow.open(map, marker);
+
+                    // 지도의 중심을 결과값으로 받은 위치로 이동시킵니다
+                    map.setCenter(coords);
+                }
+            });    
+        </script>
+    </div>
+</div>
+
+
 </body>
 {% endblock %}
