--- a/app_festaNow/templates/festa_now/audience/new_now.html
+++ b/app_festaNow/templates/festa_now/audience/new_now.html
@@ -11,10 +11,10 @@
 <body>
 <center>
     <h1>새 글을 작성해주세요</h1>
-    <a href="{% url 'now_now' %}" class="store">Festa now</a>
+    <a href="{% url 'now_now' festa.id %}" class="store">Festa now</a>
     <br>
     <br>
-    <form action="{%url 'create_now' %}" method="POST">
+    <form action="{%url 'create_now' festa.id %}" method="POST">
         {% csrf_token %}
         [Title] : <input type="text" name='title'>
         <br>
