--- a/app_festaNow/templates/festa_now/staff/edit_team.html
+++ b/app_festaNow/templates/festa_now/staff/edit_team.html
@@ -11,7 +11,7 @@
 <body>
 <center>
         <h1>글을 수정중입니다.</h1>
-        <form action="{% url 'update_team' team.id %}" method="POST">
+        <form action="{% url 'update_team' festa.id team.id %}" method="POST">
                 {% csrf_token %}
                 [Title] : <input type="text" name='title' value="{{team.title2}}">
                 <br>
