--- a/app_festaNow/templates/festa_now/staff/staff.html
+++ b/app_festaNow/templates/festa_now/staff/staff.html
@@ -3,18 +3,18 @@
 
 <div class="user_page">
     <div id="user_item_selector">
-        <img src = http://www.kpenews.com/Files/4/News/201906/260_20190620191955168.JPG style="height:500px">
+        <img src = "{{festa.poster.url}}" style="height:500px">
             <ul class="vertical-menu">
 
-                <li><a href="{% url 'now_staff' %}">공지사항</a></li>
+                <li><a href="{% url 'now_staff' festa.id %}">공지사항</a></li>
                 
-                <li><a href="{% url 'now_team' %}">팀별 게시판</a></li>
+                <li><a href="{% url 'now_team' festa.id %}">팀별 게시판</a></li>
                 
-                <li><a href="{% url 'staff_map' %}">지도</a></li>
+                <li><a href="{% url 'staff_map' festa.id %}">지도</a></li>
                 
                 <li><a href="">찾아가라</a></li>
 
-                <li><a href="{% url 'staff_home' %}">집가자</a></li>
+                <li><a href="{% url 'staff_home' festa.id %}">집가자</a></li>
 
                 </ul>
 
