--- a/app_festaNow/templates/festa_now/staff/team.html
+++ b/app_festaNow/templates/festa_now/staff/team.html
@@ -10,18 +10,18 @@
  
     <div class="row">
         <div class="col-md-5">
-            <img src = http://www.kpenews.com/Files/4/News/201906/260_20190620191955168.JPG style="height:500px">
+            <img src ="{{festa.poster.url}}"style="height:500px">
             <ul class="vertical-menu">
 
-                <li><a href="{% url 'now_staff' %}">공지사항</a></li>
+                <li><a href="{% url 'now_staff' festa.id %}">공지사항</a></li>
                 
-                <li><a href="{% url 'now_team' %}">팀별게시판</a></li>
+                <li><a href="{% url 'now_team' festa.id %}">팀별게시판</a></li>
                 
-                <li><a href="{% url 'staff_map' %}">지도</a></li>
+                <li><a href="{% url 'staff_map' festa.id %}">지도</a></li>
                 
-                <li><a href="">찾아가라</a></li>
+                <li><a href=""  >찾아가라</a></li>
 
-                <li><a href="{% url 'staff_home' %}">집가자</a></li>
+                <li><a href="{% url 'staff_home' festa.id %}">집가자</a></li>
 
                 </ul>
         </div>
@@ -29,17 +29,17 @@
     <div class="col-md-7" style="background-color:#EEE9F7; ">
       
         <h1>팀별게시판</h1>
-            <a href="{% url 'new_team'%}">글쓰기 </a>
+            <a href="{% url 'new_team' festa.id %}">글쓰기 </a>
             
             <hr>
             {% for team in teams.all %}
             <br>
-            <a href="{% url 'detail_team' team.id %}"> : {{team.title2}}</a> 
+            <a href="{% url 'detail_team' festa.id team.id %}"> : {{team.title2}}</a> 
             {{team.writer2}}
             {{team.pub_date}}
             <br>
-            <a href="{% url 'edit_team' team.id %}" class="card-link">수정하기</a>
-            <a href="{% url 'delete_team' team.id %}" class="card-link">삭제하기</a>
+            <a href="{% url 'edit_team' festa.id team.id %}" class="card-link">수정하기</a>
+            <a href="{% url 'delete_team' festa.id team.id %}" class="card-link">삭제하기</a>
             
             <div class="middle">
                 <hr>
