--- a/app_festaNow/templates/festa_now/edit_home.html
+++ b/app_festaNow/templates/festa_now/edit_home.html
@@ -11,7 +11,7 @@
 <body>
 <center>
         <h1>글을 수정중입니다.</h1>
-        <form action="{% url 'update_home' home.id %}" method="POST">
+        <form action="{% url 'update_home' festa.id home.id %}" method="POST">
                 {% csrf_token %}
                 [Title] : <input type="text" name='title' value="{{home.title}}">
                 <br>
