--- a/app_festaNow/templates/festa_now/new_home.html
+++ b/app_festaNow/templates/festa_now/new_home.html
@@ -14,7 +14,7 @@
     <input type="button" value="뒤로가기" onclick="history.back(-1);">
     <br>
     <br>
-    <form action="{%url 'create_home' %}" method="POST">
+    <form action="{% url 'create_home' festa.id %}" method="POST">
         {% csrf_token %}
         [Title] : <input type="text" name='title'>
         <br>
