--- a/app_festaReady/templates/festa_ready/list_ticket.html
+++ b/app_festaReady/templates/festa_ready/list_ticket.html
@@ -15,23 +15,22 @@
 
                 <li><a href="#">공연정보</a></li>
                 
-                <li><a href="{% url 'list_accompany' %}">동행구하기</a></li>
+                <li><a href="{% url 'list_accompany' festa.id %}">동행구하기</a></li>
                 
-                <li><a href="{% url 'list_ticket' %}">티켓 양도/교환</a></li>
+                <li><a href="{% url 'list_ticket' festa.id %}">티켓 양도/교환</a></li>
 
             </ul>
     </div>
 
     <div class="col-md-7" style="background-color:#EEE9F7; ">
-
-
+        
         {{all_tickets}}
 
         {% for item in tickets.all %}
         <p> 제목: {{item.title}}</p>
         <p> 지역: {{item.deal_type}}</p>
         <p> 작성자: {{item.writer}}</p>
-        <a href="{% url 'detail_ticket' item.pk%}" class="btn btn-primary">보러가기</a>
+        <a href="{% url 'detail_ticket' festa.id item.pk %}" class="btn btn-primary">보러가기</a>
         <p>-------------------------</p>
 
         {% endfor %}
