--- a/app_festaReady/templates/festa_ready/create_accompany.html
+++ b/app_festaReady/templates/festa_ready/create_accompany.html
@@ -1,6 +1,6 @@
 
 
-<form action=" {% url 'create_accompany' %}" method="POST" enctype="multipart/form-data">
+<form action=" {% url 'create_accompany' festa.id %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <label>제목</label><br>
         <input type="text" name="title"><br>
