--- a/app_festaReady/templates/festa_ready/create_ticket.html
+++ b/app_festaReady/templates/festa_ready/create_ticket.html
@@ -1,5 +1,5 @@
 
-<form action=" {% url 'create_ticket' %}" method="POST" enctype="multipart/form-data">
+<form action=" {% url 'create_ticket' festa.id %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <label>제목</label><br>
         <input type="text" name="title"><br>
