--- a/app_festaReady/templates/festa_ready/detail_ticket.html
+++ b/app_festaReady/templates/festa_ready/detail_ticket.html
@@ -7,9 +7,9 @@
 <img src="{{ ticket.image.url }}">
 {% endif %}
 
-<a href="{% url 'edit_ticket' ticket.pk %}" class="btn btn-primary">수정</a>
+<a href="{% url 'edit_ticket' festa.id ticket.pk %}" class="btn btn-primary">수정</a>
 
-<form action="{% url 'delete_ticket' ticket.pk %}" method="POST">
+<form action="{% url 'delete_ticket' festa.id ticket.pk %}" method="POST">
         {% csrf_token%}
         <input type="submit" value="삭제" class="btn btn-primary">
 </form>
@@ -23,7 +23,7 @@
 <hr>
 {% endfor%}
 
-<form action="{% url 'comment_ticket' ticket.id %}" method="POST">
+<form action="{% url 'comment_ticket' festa.id ticket.id %}" method="POST">
     {% csrf_token %}
     작성자 : <input name="writer" type="text">
     <br>
