--- a/app_festaReady/templates/festa_ready/ticket.html
+++ b/app_festaReady/templates/festa_ready/ticket.html
@@ -1,4 +1,4 @@
 <h1>티켓거래 게시판</h1>
 
-<a href="{% url 'list_ticket' %}">리스트보기</a><br>
-<a href="{% url 'create_ticket' %}">글쓰기</a><br>
+<a href="{% url 'list_ticket' festa.id %}">리스트보기</a><br>
+<a href="{% url 'create_ticket' festa.id %}">글쓰기</a><br>
