--- a/app_festa/templates/festa_home/new.html
+++ b/app_festa/templates/festa_home/new.html
@@ -16,7 +16,7 @@
             <p>공연 제목</p>
             <input type="text" name="name">
             <p>공연 날짜</p>
-            <input type="date" name="schedule">
+            <input type="date" name="schedule_start"> ~ <input type="date" name="schedule_end">
             <p>공연 장소</p>
             <input type="text" name="space">
             <p>공식 티켓판매처 링크</p>
