--- a/app_festaReady/templates/festa_ready/list_accompany.html
+++ b/app_festaReady/templates/festa_ready/list_accompany.html
@@ -24,7 +24,7 @@
 
     <div class="col-md-7" style="background-color:#EEE9F7; ">
 
-        <a href="{% url 'create_accompany' %}" class="btn btn-primary">글쓰기</a>
+        <a href="{% url 'create_accompany' festa.id %}" class="btn btn-primary">글쓰기</a>
 
         <form action="" method="get">
                 <input type="text" name="search" value="{{ search }}">
