--- a/project_festa/templates/base.html
+++ b/project_festa/templates/base.html
@@ -10,19 +10,20 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" />
 </head>
 
 <body>
     <!-- navbar시작 -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="nav_container">
         <a class="navbar-brand" href="{% url 'home' %}">FGD</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,46 +32,105 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <!-- <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-                </li> -->
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'confirm_login' %}">등록 확인</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'new' %}">페스타 등록하기</a>
                 </li>
-                <!-- <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li> -->
             </ul>
-            <!-- <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form> -->
-            
+
         </div>
     </nav>
     <!-- navbar 끝 -->
 
-    <!-- 본문 시작 -->
-    {% load staticfiles %}
+    <div id="container_select_staff_audience">
+        <div id="festa_image">
+                <div id="user_item_selector">
+                        <img src="{{festa.poster.url}}" style="height:500px">
+                        <ul class="vertical-menu">
+                
+                            <li><a href="{% url 'now_staff' festa.id %}">공지사항</a></li>
+                
+                            <li><a href="{% url 'now_team' festa.id %}">팀별 게시판</a></li>
+                
+                            <li><a href="{% url 'staff_map' festa.id %}">지도</a></li>
+                
+                            <li><a href="">찾아가라</a></li>
+                
+                            <li><a href="{% url 'staff_home' festa.id %}">집가자</a></li>
+                
+                        </ul>
+                
+                    </div>
+            <!-- <img id="detail_background_img" src="/static/image/detail_background.png" alt="detail"> -->
+            <div class="img_wrapper">
+                <img class="detail_thumnail" src="{{ festa_now.poster.url }}">
+            </div>
+        </div>
+        <div id="festa_select_box">
+            <!-- 본문 시작 -->
+            {% load staticfiles %}
 
-    {% block content %}
-    {% endblock %}
-    <footer>
-        
-    </footer>
+            {% block content %}
+            {% endblock %}
+        </div>
+    </div>
+</body>
+
+<footer id="footer_container">
+    <div id="bt_footer_element">
+        <div class="footer_item_top"><a href="#individual_information_policy">개인정보처리방침</a></div>
+        <div class="footer_item_top"><a href="#agreement">이용약관</a></div>
+        <div class="footer_item_top"><a href="#service_introduce">서비스소개</a></div>
+    </div>
+</footer>
+
+<!-- 자바 스크립트 연결 -->
+{% load static %}
+<script type="text/javascript" src="{% static 'js/base_js.js' %}"></script>
+
 </html>
+
+<style>
+    #bt_footer_element {
+        width: 100%;
+        display: flex;
+        padding-top: 1%;
+        padding-bottom: 1%;
+        padding-left: 8%;
+    }
+
+    #bt_footer_element a {
+        color: #000000;
+        text-decoration: none;
+    }
+
+    .footer_item_top {
+        margin-left: 0.5%;
+        margin-right: 0.5%;
+        font-size: 14px;
+    }
+
+    #container_select_staff_audience {
+        width: 100%;
+        display: flex;
+        overflow: hidden;
+    }
+
+    #festa_image {
+        width: 35%;
+        background: #ffffff;
+    }
+
+    #festa_select_box {
+        width: 65%;
+        background: #EEE9F7;
+        display: flex;
+    }
+
+    .img_wrapper {
+        width: 100%;
+        overflow: hidden;
+    }
+</style>
