--- a/project_festa/templates/base_copyright_version.html
+++ b/project_festa/templates/base_copyright_version.html
@@ -9,19 +9,22 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=msaqxk6pg1"></script>
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=msaqxk6pg1">
+    </script>
 </head>
 
 <body>
@@ -35,36 +38,14 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <!-- <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-                </li> -->
                 <li class="nav-item">
                     <a class="nav-link" href="#">등록 확인</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'new' %}">페스타 등록하기</a>
                 </li>
-                <!-- <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li> -->
             </ul>
-            <!-- <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form> -->
-            
+
         </div>
     </nav>
     <!-- navbar 끝 -->
@@ -75,62 +56,72 @@
     {% block content %}
     {% endblock %}
     <footer>
-            <div id="bt_footer_element">
-                    <div class="footer_item_top"><a href="#individual_information_policy">개인정보처리방침</a></div>
-                    <div class="footer_item_top"><a href="#agreement">이용약관</a></div>
-                    <div class="footer_item_top"><a href="#service_introduce">서비스소개</a></div>
-                </div>
-                <div id="text_footer_element">
-                    <div id="footer_item_img">
-                        <div id="img_copyright"></div>
-                    </div>
-                    <div id="footer_item_text">
-                        페스타 그라운드(Festa ground) <br>
-                        COPYRIGHT &copy; 2019 LIKELION Festa ground team <br>
-                        ALL RIGHTS RESERVED
-                    </div>
-                </div>
+        <div id="bt_footer_element">
+            <div class="footer_item_top"><a href="#individual_information_policy">개인정보처리방침</a></div>
+            <div class="footer_item_top"><a href="#agreement">이용약관</a></div>
+            <div class="footer_item_top"><a href="#service_introduce">서비스소개</a></div>
+        </div>
+        <div id="text_footer_element">
+            <div id="footer_item_img">
+                <div id="img_copyright"></div>
+            </div>
+            <div id="footer_item_text">
+                페스타 그라운드(Festa ground) <br>
+                COPYRIGHT &copy; 2019 LIKELION Festa ground team <br>
+                ALL RIGHTS RESERVED
+            </div>
+        </div>
     </footer>
+
 </html>
 
 <style>
-    footer{
+    footer {
         width: 100%;
         background: #D9E5FF;
     }
-    #bt_footer_element, #text_footer_element{
+
+    #bt_footer_element,
+    #text_footer_element {
         width: 100%;
         display: flex;
         justify-content: center;
     }
-    #bt_footer_element{
+
+    #bt_footer_element {
         padding-top: 2%;
     }
-    #bt_footer_element a{
+
+    #bt_footer_element a {
         color: #000000;
         text-decoration: none;
     }
-    #text_footer_element{
+
+    #text_footer_element {
         padding-top: 1%;
         padding-bottom: 2%;
     }
-    .footer_item_top{
+
+    .footer_item_top {
         margin-left: 0.5%;
         margin-right: 0.5%;
         font-size: 10px;
     }
-    #footer_item_text{
+
+    #footer_item_text {
         opacity: 0.5;
         font-size: 10px;
     }
-    #footer_item_img{
+
+    #footer_item_img {
         width: 10%;
         opacity: 0.5;
     }
-    #img_copyright{
+
+    #img_copyright {
         width: 100%;
         height: 100%;
-        background-image: url("/static/copyright.png");
+        background-image: url("/static/image/copyright.png");
         background-size: contain;
         background-position: center center;
         background-repeat: no-repeat;
