--- a/app_festa/templates/festa_home/home.html
+++ b/app_festa/templates/festa_home/home.html
@@ -81,7 +81,7 @@
                 <div class="item_object">
                     <!-- 이미지 표시 박스 -->
                     <div class="img_wrapper">
-                        <a href="{% url 'ready_detail' festa_ready.id %}"><img class="thumnail"
+                        <a href="{% url 'ready_main' festa_ready.id %}"><img class="thumnail"
                                 src="{{ festa_ready.poster.url }}"></a>
                     </div>
                     <!-- 날짜 표시 박스 -->
