--- a/app_festaNow/templates/festa_now/audience/audience_home.html
+++ b/app_festaNow/templates/festa_now/audience/audience_home.html
@@ -6,7 +6,7 @@
         <img src = "{{festa.poster.url}}" style="height:500px">
         <ul>
 
-            <li><a href="{% url 'now_audience' festa.id %}">공지사항</a></li>
+            <li><a href="{% url 'audience_main' festa.id %}">공지사항</a></li>
                 
             <li><a href="{% url 'now_now' festa.id %}">Festa now</a></li>
             
