--- a/app_festaNow/templates/festa_now/audience/audience_main.html
+++ b/app_festaNow/templates/festa_now/audience/audience_main.html
@@ -13,7 +13,7 @@
             <img src ="{{festa.poster.url}}"style="height:500px">
             <ul>
 
-                <li><a href="{% url 'now_audience' festa.id %}">공지사항</a></li>
+                <li><a href="{% url 'audience_main' festa.id %}">공지사항</a></li>
                 
                 <li><a href="{% url 'now_now' festa.id %}">Festa now</a></li>
                 
@@ -21,7 +21,7 @@
                 
                 <li><a href="">찾아가라</a></li>
 
-                <li><a href="{% url 'audience_home' festa.id %}">집가자</a></li>
+                <li><a href="">집가자</a></li>
 
                 </ul>
 
