--- a/app_festaNow/templates/festa_now/staff/staff_home.html
+++ b/app_festaNow/templates/festa_now/staff/staff_home.html
@@ -14,7 +14,7 @@
             
             <li><a href="">찾아가라</a></li>
 
-            <li><a href="{% url 'staff_home' festa.id %}">집가자</a></li>
+            <li><a href="">집가자</a></li>
 
             </ul>
 
