--- a/app_festaNow/templates/festa_now/staff/staff_main.html
+++ b/app_festaNow/templates/festa_now/staff/staff_main.html
@@ -6,7 +6,7 @@
         <img src=http://www.kpenews.com/Files/4/News/201906/260_20190620191955168.JPG style="height:500px">
         <ul class="vertical-menu">
 
-            <li><a href="{% url 'now_staff' festa.id %}">공지사항</a></li>
+            <li><a href="{% url 'staff_main' festa.id %}">공지사항</a></li>
 
             <li><a href="{% url 'now_team' festa.id %}">팀별 게시판</a></li>
 
@@ -14,51 +14,13 @@
 
             <li><a href="">찾아가라</a></li>
 
-            <li><a href="{% url 'staff_home' festa.id %}">집가자</a></li>
+            <li><a href="">집가자</a></li>
 
         </ul>
 
     </div>
 </div>
 
-<<<<<<< HEAD
-    <div id="user_item_view">
-        <div id="table_bt_div">
-            <span><input type="submit" value="글쓰기"></span>
-            <div id="table_div">
-                    <table>
-                            <tr>
-                                <td id="table_intro" colspan="5"> 2019 멋사 해커톤 대회에 대한 게시판 입니다.</td>
-                            </tr>
-                            <tr id="kind_board">
-                                
-                                <td id="title" class="headTd">구분</td>
-                                <td id="title" class="headTd">제목</td>
-                                <td id="title" class="headTd">작성자</td>
-                                <td id="title" class="headTd">날짜</td>
-                                <td id="title" class="headTd">시간</td>
-                            </tr>
-                            <!-- 공지등록 -->
-                            {% for staff in staffs.all %}
-                            <tr id="notice_board">
-                                <td>공지사항</td>
-                                <td class="title_td"><a href="{% url 'staff_detail' festa.id staff.id %}">{{staff.title}}</a></td>
-                                <td>{{staff.writer}}</td>
-                                <td>{{staff.pub_date}}</td>
-                                <td>시간</td>
-                            </tr>
-                            {% endfor %}
-                            <!-- 내용등록 -->
-                            <tr id="content_board">
-                                <td>번호</td>
-                                <td class="title_td"><a href="test">(지역) 제목</a></td>
-                                <td>작성자</td>
-                                <td>등록날짜</td>
-                                <td>조회수</td>
-                            </tr>
-                        </table>
-            </div>
-=======
 <div id="user_item_view">
     <div id="table_bt_div">
         <span><input type="submit" value="글쓰기"></span>
@@ -88,7 +50,6 @@
                     <td>날짜 시간</td>
                 </tr>
             </table>
->>>>>>> 5fe127f7a0d69bfb6b6acbb3be6b81c03e5957ae
         </div>
     </div>
 </div>
