--- a/app_festaReady/templates/festa_ready/list_accompany.html
+++ b/app_festaReady/templates/festa_ready/list_accompany.html
@@ -13,7 +13,7 @@
             <img src = "{{festa.poster.url}}" style="height:500px">
             <ul class="vertical-menu">
 
-                <li><a href="#">공연정보</a></li>
+                <li><a href="{% url 'ready_main' festa.id %}">공연정보</a></li>
                 
                 <li><a href="{% url 'list_accompany' festa.id %}">동행구하기</a></li>
                 
